Workaround to make the documentation come alive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
 
-<link rel="stylesheet" href="/swig/css/swig.css">
+<link rel="stylesheet" href="/swig-docs/swig/css/swig.css">
 
 
 
@@ -111,8 +111,8 @@ swig.renderFile('/path/to/template.html', {
       <h2>Download For the Browser</h2>
       <p>Swig also works in all major browsers. Just download the following file and follow the <a href="/swig/docs/#browser">Documentation</a>.</p>
       <p class="download">
-        <a href="/swig/js/swig.min.js" class="btn">Download v1.4.2</a><br><br>
-        <a href="/swig/js/swig.js">Development</a> | <a href="/swig/js/swig.min.js">Production</a> (<a href="/swig/js/swig.js.map">source map</a>)
+        <a href="/swig-docs/swig/js/swig.min.js" class="btn">Download v1.4.2</a><br><br>
+        <a href="/swig-docs/swig/js/swig.js">Development</a> | <a href="/swig-docs/swig/js/swig.min.js">Production</a> (<a href="/swig-docs/swig/js/swig.js.map">source map</a>)
       </p>
 
       <hr class="small">
@@ -141,8 +141,8 @@ swig.renderFile('/path/to/template.html', {
 
 
   
-<script src="/swig/js/lib/rainbow.min.js"></script>
-<script src="/swig/js/master.js"></script>
+<script src="/swig-docs/swig/js/lib/rainbow.min.js"></script>
+<script src="/swig-docs/swig/js/master.js"></script>
 
 </body>
 </html>
