--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
 
-<link rel="stylesheet" href="/swig-docs/swig/css/swig.css">
+<link rel="stylesheet" href="/css/swig.css">
 
 
 
@@ -28,7 +28,7 @@
 <header class="header">
   <div class="content row">
     <hgroup class="span7">
-      <h1><a href="/swig/">Swig</a></h1>
+      <h1><a href="/">Swig</a></h1>
       <h2>A Node.js and Browser-based JavaScript Template Engine</h2>
     </hgroup>
     
@@ -141,8 +141,8 @@ swig.renderFile('/path/to/template.html', {
 
 
   
-<script src="/swig-docs/swig/js/lib/rainbow.min.js"></script>
-<script src="/swig-docs/swig/js/master.js"></script>
+<script src="/js/lib/rainbow.min.js"></script>
+<script src="/js/master.js"></script>
 
 </body>
 </html>
