--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
 
-<link rel="stylesheet" href="/css/swig.css">
+<link rel="stylesheet" href="/swig-docs/css/swig.css">
 
 
 
@@ -28,13 +28,13 @@
 <header class="header">
   <div class="content row">
     <hgroup class="span7">
-      <h1><a href="/">Swig</a></h1>
+      <h1><a href="/swig-docs/">Swig</a></h1>
       <h2>A Node.js and Browser-based JavaScript Template Engine</h2>
     </hgroup>
     
     <nav class="span5">
       <ul class="mainNav">
-        <li><a href="/swig/docs/">Documentation</a></li>
+        <li><a href="/swig-docs/swig/docs/">Documentation</a></li>
         <li><a href="https://github.com/paularmstrong/swig/">Code</a></li>
       </ul>
     </nav>
@@ -50,7 +50,7 @@
 
   <div class="row guttered">
     <p class="span6">A simple, powerful, and extendable JavaScript Template Engine.</p>
-    <p class="span6">Current Version: <strong>v1.4.2</strong>. <a href="/swig/docs/previous/">Looking for an older version?</a></p>
+    <p class="span6">Current Version: <strong>v1.4.2</strong>. <a href="/swig-docs/swig/docs/previous/">Looking for an older version?</a></p>
   </div>
 
   <hr class="small">
@@ -60,7 +60,7 @@
     <section class="span6">
       <h2>Super Quick Start</h2>
 
-      <p>For a more in-depth intro, check out the <a href="/swig/docs/">Getting Started docs</a>.</p>
+      <p>For a more in-depth intro, check out the <a href="/swig-docs/swig/docs/">Getting Started docs</a>.</p>
 
       <h3>Install Swig</h3>
       <pre><code>npm install swig --save</code></pre>
@@ -109,7 +109,7 @@ swig.renderFile('/path/to/template.html', {
       <hr class="small">
 
       <h2>Download For the Browser</h2>
-      <p>Swig also works in all major browsers. Just download the following file and follow the <a href="/swig/docs/#browser">Documentation</a>.</p>
+      <p>Swig also works in all major browsers. Just download the following file and follow the <a href="/swig-docs/swig/docs/#browser">Documentation</a>.</p>
       <p class="download">
         <a href="/swig-docs/swig/js/swig.min.js" class="btn">Download v1.4.2</a><br><br>
         <a href="/swig-docs/swig/js/swig.js">Development</a> | <a href="/swig-docs/swig/js/swig.min.js">Production</a> (<a href="/swig-docs/swig/js/swig.js.map">source map</a>)
@@ -141,8 +141,8 @@ swig.renderFile('/path/to/template.html', {
 
 
   
-<script src="/js/lib/rainbow.min.js"></script>
-<script src="/js/master.js"></script>
+<script src="/swig-docs/js/lib/rainbow.min.js"></script>
+<script src="/swig-docs/js/master.js"></script>
 
 </body>
 </html>
